@@ -55,6 +55,7 @@ Boston, MA 02111-1307, USA.  */
 
 #include <errno.h>
 #include <stdlib.h>
+#include <unistd.h>
 #include <string>
 #include <iostream>
 
