@@ -35,6 +35,7 @@ Boston, MA 02111-1307, USA.  */
    
 #include <assert.h>
 #include <stdio.h>
+#include <unistd.h>
 #include <iostream>
 #include <iomanip>
 #include <string>
