@@ -36,6 +36,7 @@ Boston, MA 02111-1307, USA.  */
 #if !defined(_MAX_PATH)
   #define _MAX_PATH 1024
 #endif
+#include <unistd.h>  // for getcwd 
 
 #else
 #include <direct.h>
